monticore-generator/src/test/resources/cocos/invalid/A0120/A0120b.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A0120;

grammar A0120b {

  A = "a";

  interface Foo = bar:"bar" A key("b");



}
